ApplicationWithK8s/03-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: benchmark
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: "0.5"
              memory: 256Mi
          args:
            - postgres
            - -c
            - max_connections=300
            - -c
            - shared_buffers=64MB
            - -c
            - work_mem=4MB
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          # Проверка что БД готова принимать запросы
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: benchmark
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  # ClusterIP — БД доступна только внутри кластера
  type: ClusterIP
