ApplicationWithK8s/04-service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: benchmark
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          # Замени на свой образ: docker build -t your-registry/service2:latest .
          image: service2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: "0.1"
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
  namespace: benchmark
spec:
  selector:
    app: service2
  ports:
    - port: 8080
      targetPort: 8080
  # ClusterIP — сервис 2 недоступен снаружи, только для сервиса 1
  type: ClusterIP
